examples/bad/bad_app.xp

notFunction = 10;

# results in an error "cannot apply 10 to 1", since notFunction
# is... not a function
main = notFunction 1;
